cmake_minimum_required(VERSION 2.6)

PROJECT(POLSARPROSIM)

ENABLE_TESTING()
IF(BUILD_TESTING)
  SET(BUILDNAME "${BUILDNAME}" CACHE STRING "Name of build on the dashboard")
  MARK_AS_ADVANCED(BUILDNAME)
ENDIF(BUILD_TESTING)

IF (BUILD_TESTING)
  ADD_SUBDIRECTORY(tests)
ENDIF (BUILD_TESTING)

ADD_SUBDIRECTORY(PolSARproSIM)
